--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -23,6 +23,7 @@
 }
 .swiper_box swiper image{
   width: 100%;
+  height: 340rpx;
   border-radius: 18rpx;
 }
 /* 推荐课程模块 */
@@ -59,6 +60,7 @@
   width: 296rpx;
   height: 168rpx;
   margin-right: 20rpx;
+  border-radius: 12rpx;
 }
 /* 热门视频模块 */
 .hot_video{
@@ -93,7 +95,7 @@
 }
 .intro{
   margin: 16rpx 0;
-  font-size: 32rpx;
+  font-size: 28rpx;
   margin-left: 10rpx;
 }
 .watchNum{
