--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -15,6 +15,6 @@
       <!-- 隐藏 -->
       <button open-type="getUserInfo"  bindgetuserinfo="getUserInfo">登录</button>
     </view>
-    <text class="phoneLogin">手机号码登录</text>
+    <text class="phoneLogin" bindtap="toPhoneLogin">手机号码登录</text>
   </view>
 </view>
